fix spacing issue with admin bar

--- a/resources/assets/styles/components/_navigation.scss
+++ b/resources/assets/styles/components/_navigation.scss
@@ -283,6 +283,10 @@
    
 }
 
+// Compensation for admin bar.
+.admin-bar .main-nav__container {
+  top: 32px;
+}
 
 .mobile-menu {
   &--show {
